# glitchlab

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  compose-ops.yaml  compose.yaml
.beads/: issues.jsonl
.claude/skills/pr/: SKILL.md
.githooks/: pre-commit  pre-commit.old
.github/workflows/: ci.yml
.glitchlab/: STATUS.md  codebase-context.md  config.yaml
.glitchlab/docs/: model-pool.md
.glitchlab/tasks/: backlog.yaml  canary-budget-gate.yaml  canary-leaf-rerun.yaml  canary-sizing.yaml  ollama-tool-task.yaml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  main_test.rs  paths.rs
crates/cli/src/commands/: batch.rs  common.rs  dashboard.rs  history.rs  init.rs  interactive.rs  mod.rs  next.rs  run.rs  status.rs  version.rs
crates/cli/tests/: batch_dry_run.rs  e2e.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: data.rs  lib.rs  main.rs  sse.rs
crates/dashboard/templates/: index.html  layout.html
crates/eng-org/: Cargo.toml  README.md
crates/eng-org/src/: config.rs  dashboard.rs  eval.rs  indexer.rs  input_validation.rs  lib.rs  orchestrator.rs  pipeline.rs  policy.rs  taskqueue.rs  tools.rs  tqm.rs  workspace.rs
crates/eng-org/src/agents/: adr_decomposer.rs  architect.rs  archivist.rs  backlog_review.rs  ciso.rs  claude_code.rs  debugger.rs  implementer.rs  mod.rs  ops.rs  parse.rs  planner.rs  release.rs  security.rs
crates/eng-org/tests/: memory_integration.rs
crates/glitchlab-ops-org/: Cargo.toml
crates/glitchlab-ops-org/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: agent.rs  budget.rs  context.rs  error.rs  eval.rs  governance.rs  greeting.rs  lib.rs  org.rs  outcome.rs  pipeline.rs  tool.rs
crates/memory/: Cargo.toml
crates/memory/src/: beads.rs  composite.rs  dedup.rs  dolt.rs  error.rs  history.rs  lib.rs
crates/ops-org/: Cargo.toml
crates/ops-org/src/: config.rs  deploy.rs  fly.rs  lib.rs  parse.rs  smoke.rs
crates/ops-org/src/agents/: mod.rs  uplink.rs
crates/router/: Cargo.toml
crates/router/src/: chooser.rs  credentials.rs  lib.rs  provider.rs  provider_diagnostics.rs  response.rs  router.rs
crates/router/src/provider/: anthropic.rs  gemini.rs  openai.rs
docs/: adr-agentic-corporation-framework.md  adr-aggressive-task-decomposition.md  adr-claude-code-implementer.md  adr-context-evaluation-lifecycle.md  adr-cost-aware-model-routing.md  adr-delivery-and-sre-ops-org.md  adr-dev-mode-external-repository-operation.md  adr-dual-product-evolution-strategy.md  adr-implementation-language.md  adr-implementation-strategy-tool-use-vs-api.md  adr-layered-security-review.md  adr-multi-org-beads-namespaces.md  adr-observability-and-continuous-operations.md  adr-supervision-and-failure-as-learning.md  adr-tqm-self-improvement-architecture.md  adr-untrusted-input-defense.md  analysis-full-agentic-ops-delta.md  eng-org-kernel-seams.md  ollama-tool-use-models.md  refined_prompt_gl-7iy.2.md  runbook-lowendinsight-deploy.md  runbook-lowendinsight-fly-deploy.md  seams-eng-general.md
docs/adr/: agentic-corporation-framework-seams.md
glitchlab/: config.yaml  router.py
glitchlab/agents/: planner.py  test_planner.py
glitchlab/agents/tests/: test_planner.py
glitchlab/governance/: failure_tracker.py
glitchlab/governance/tests/: test_failure_tracker.py
glitchlab/tests/: test_router.py
glitchlab/workspace/: tools.py
glitchlab/workspace/tests/: test_tools.py
