[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/memory",
    "crates/router",
    "crates/eng-org",
    "crates/cli",
    "crates/ops-org",
    "crates/dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/adjective-llc/glitchlab"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Schema generation (structured LLM output)
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Identity + time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SQL (Dolt backend)
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }

# Retry logic
backon = "1"

# Glob matching
glob = "0.3"

# Lazy initialization
once_cell = "1"

# OpenTelemetry
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "0.15" }

# Workspace crates
glitchlab-kernel = { path = "crates/kernel" }
glitchlab-memory = { path = "crates/memory" }
glitchlab-router = { path = "crates/router" }
glitchlab-eng-org = { path = "crates/eng-org" }
glitchlab-dashboard = { path = "crates/dashboard" }
