[package]
name = "glitchlab-cli"
description = "CLI interface for GLITCHLAB"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glitchlab"
path = "src/main.rs"

[dependencies]
glitchlab-kernel.workspace = true
glitchlab-eng-org.workspace = true
glitchlab-memory = { workspace = true, features = ["dolt"] }
glitchlab-router.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
