[package]
name = "glitchlab-cli"
description = "CLI interface for GLITCHLAB"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glitchlab"
path = "src/main.rs"

[dependencies]
glitchlab-dashboard = { workspace = true }
glitchlab-kernel.workspace = true
glitchlab-eng-org.workspace = true
glitchlab-memory = { workspace = true, features = ["dolt"] }
glitchlab-router.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
regex = "1.10.5"
tempfile = "3"
