[package]
name = "glitchlab-memory"
description = "Dolt + Beads integration for institutional memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glitchlab-kernel.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
