[package]
name = "glitchlab-memory"
description = "Dolt + Beads integration for institutional memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["dolt"]
dolt = ["sqlx"]

[dependencies]
glitchlab-kernel.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
