[package]
name = "ops-org"
version.workspace = true
edition.workspace = true

[dependencies]
glitchlab-kernel = { workspace = true }
glitchlab-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
