[package]
name = "glitchlab-router"
description = "Vendor-agnostic LLM routing with budget tracking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glitchlab-kernel.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
backon.workspace = true
chrono.workspace = true
uuid.workspace = true
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
